--- a/app/src/main/res/layout/item_collapse.xml
+++ b/app/src/main/res/layout/item_collapse.xml
@@ -8,14 +8,13 @@
     android:orientation="vertical"
     android:padding="8dp">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/item_col_image"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:scaleType="centerCrop"
-        android:background="#757575"
-        android:tint="#232323"
-        app:srcCompat="@drawable/avatar_placeholder" />
+        android:src="@drawable/avatar_placeholder"
+        app:civ_border_color="#FFFFFF"
+        app:civ_border_width="2dp" />
 
     <TextView
         android:id="@+id/item_col_name"
@@ -26,7 +25,7 @@
         android:layout_alignTop="@+id/item_col_image"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textSize="24sp"
+        android:textSize="18sp"
         tools:text="Client Name" />
 
     <TextView
@@ -37,7 +36,7 @@
         android:layout_alignBottom="@+id/item_col_image"
         android:layout_alignParentStart="true"
         android:layout_marginStart="90dp"
-        android:text="Phone"
+        android:text="Nick name :"
         android:textColor="@color/greySecondary"
         android:textSize="18sp" />
 
@@ -47,8 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/item_col_image"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="124dp"
+        android:layout_toEndOf="@+id/item_col_phone"
         android:textColor="@color/greySecondary"
         android:textSize="18sp"
         tools:text="0708440184" />
